syntax = "proto3";
package com.wavesplatform.api.grpc;

import "transactions_api.proto";
import "transaction.proto";

service AccountsApi {
    rpc GetBalance (BalanceRequest) returns (BalanceResponse);
    rpc GetEffectiveBalance (BalanceRequest) returns (BalanceResponse);
    rpc GetBalanceDetails (BalanceRequest) returns (BalanceDetailsResponse);
    rpc GetAssetBalance (AssetBalanceRequest) returns (BalanceResponse);
    rpc GetPortfolio (AccountRequest) returns (stream Amount);
    rpc GetScript (AccountRequest) returns (AccountScriptResponse);
    rpc GetActiveLeases (AccountRequest) returns (stream TransactionWithHeight);
}

message AccountRequest {
    bytes address = 1;
}

message BalanceRequest {
    bytes address = 1;
    int32 confirmations = 2;
}

message AssetBalanceRequest {
    bytes address = 1;
    bytes asset_id = 2;
}

message DataRequest {
    bytes address = 1;
    string key = 2;
}

message BalanceResponse {
    int64 balance = 1;
}

message BalanceDetailsResponse {
    int64 balance = 1;
    int64 generating_balance = 2;
    int64 available_balance = 3;
    int64 effective_balance = 4;
}

message AccountScriptResponse {
    bytes script = 1;
    string script_text = 2;
    int64 complexity = 3;
    int64 extra_fee = 4;
}
